# simple-rust-api

./: README.md
api/: .env  Cargo.toml
api/src/: main.rs
api/src/users/: handler.rs  mod.rs  models.rs  routes.rs  service.rs
db/: docker-compose.yml
