[package]
name = "simple-rust-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.36.0", features = ["full"] }
warp = "0.3.6"
dotenv = "0.15.0"
clap = "4.5.2"
serde = { version = "1.0.118", features = ["derive"] }
serde_json = "1.0.60"
sqlx = { version = "0.7.3", features = ["runtime-tokio", "macros"] }